glibc: Add THREADS for make, add status to email
Other things include:
 - Add gmp-native, needed by gdb (binutils-native) now
 - Update tests explained, many tests fixed
 - add protobuf.build, for testing compiler/toolchain bugs

--- a/glibc/glibc.build.gcc1.5
+++ b/glibc/glibc.build.gcc1.5
@@ -10,6 +10,6 @@ touch $INSTALLDIR/$CROSS/include/gnu/stubs.h
 
 pushd $BUILDDIR/build-gcc
 
-    make -j4 all-target-libgcc && make install-target-libgcc
+    make -j${THREADS} all-target-libgcc && make install-target-libgcc
 
 popd
